# compute_path_tracer

./: .gitignore  Cargo.toml  README.md
assets/depricated/: old.rs
assets/maps/: Name.json  cubes.json  test.json
assets/shaders/path_tracer/: aabb.glsl  funcs.glsl  map.glsl  rng.glsl  shapes.glsl  test  test.glsl  test_compute.glsl
assets/shaders/path_tracer/shader_out/: test_compute.glsl  tester.glsl
src/: lib.rs  main.rs  state.rs
src/inbuilt/: event_loop.rs  gui.rs  setup.rs  vertex_library.rs  vertex_package.rs
src/path_tracer/: path_tracer.rs  test_compute.glsl
src/path_tracer/shader_output/: shader_output.glsl
src/path_tracer/shaders/: funcs.glsl  map.glsl  shapes.glsl  test_compute.glsl
src/pipelines/: render_texture_pipeline.rs  render_texture_shader.wgsl
src/sdf_editor/: containers.rs  data_structures.rs  primitives.rs  sdf_editor.rs  sdf_editor_old.rs
src/utility/: functions.rs  macros.rs  structs.rs
