[package]
name = "compute_path_tracer"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
winit = { version = "0.29", features = ["rwh_05"] }
bytemuck = { version = "1.12", features = [ "derive" ] }
env_logger = "0.10"
log = "0.4"
wgpu = { version = "0.19.3", features = ["glsl"] }
pollster = "0.3"
cgmath = "0.18"
rand = "0.8.5"

egui-wgpu = "0.27.2"
egui-winit = "0.27.2"
egui = "0.27.2"
egui_plot = "0.27.2"